--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,12 @@
+:root {
+  --primary: #20c997
+}
+
+@media (min-width: 1400px) {
+  .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+      max-width: 1800px !important;
+  }
+}
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,5 +14,8 @@ body {
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    .btn.btn-primary {
+    border: none;
+    background-color: var(--primary);
+  }
 }
-  
